Morceau de lexique

--- a/analyse.tex
+++ b/analyse.tex
@@ -33,33 +33,59 @@
 \subsection{Doyen}
 
 \subsection{Gestionnaire de campagne}
+S'occupe de la gestion d'une camapagne d'évaluation.
 Entité pouvant être composée de plusieurs personnes.
+
+\subsection{Superviseur}
+
+\subsection{Gestionnaire de communication}
+Transversal aux facultés.
+
+\subsection{Chargé de communication facultaire}
+Communique différentes informations relatives aux campagnes d'évaluations à la communauté universitaire.
+
+\subsection{Gestionnaire pédagogique faculaire}
+Toute personne ayant une responsabilité au niveau faculaire dans le traitement des résultats de campagne, la consultation de ces résultats et la gestion des questionnaires de campagne.
 
 \subsection{Commision pédagogique facultaire}
 \subsubsection{Membre}
 \subsubsection{Président}
+Le président siège au conseil des commissions pédagogiques.
 
-\subsection{Conseil des commissions pédagogiques (CoCoPe}
+\subsection{Conseil des commissions pédagogiques (CoCoPe)}
+Conférence rassemblant les présidents et vice-présidents de chaque commission pédagogique facultaire, ainsi que le recteur, vice-recteur à l'enseignement et deux conseillers pédagogiques désignés par ces derniers.
+Ce conseil est présidé par le recteur ou le vice-recteur qu'il désigne.
+
+Le CoCoPe a le pouvoir de modifier le règlement cadre et a pour tâche de mettre à jour la banque de questionnaires.
 
 % \subsection{CoA}
 
 \subsection{Étudiant}
+Personne inscrite régulièrement à l'Université Libre de Bruxelles et suivant un certain nombre d'unités d'enseignement.
 
 \subsection{Enseignant}
-
-\subsection{Cellule de communication universitaire}
+Personne dispensant une unité d'enseignement à un ensemble d'étudiants.
+Il peut s'agir d'un professeur ou d'un assitant, titulaire ou non de chacune des unités d'enseignement auxquelles il participe.
 
 \subsection{Unité d'enseignement}
 
+\subsection{Cellule de communication universitaire}
+
 \subsection{Campagne}
 
+
+\subsection{Enquête}
+Processus regroupant la prise d'avis des étudiants, le traitement des résultats ainsi que la consultation de ces derniers.
+
 \subsection{Calendrier}
+Ensemble de dates et de périodes liées à une campagne d'évaluation.
 
 \subsection{Période}
 Intervalle de temps ayant une date et une heure de début et de fin.
 
 \subsection{Département de support aux activités académiques (DSAA)}
 
+\subsection{Directeur administratif facultaire (DAF)}
 
 
 
@@ -103,6 +129,7 @@ DAF & \\ \hline
 Président de la com péd & \\ \hline
 Gestionnaire de calendrier & \\ \hline
 Traitement des résultats & \\ \hline
+DAF & \\ \hline
 
 \end{tabularx}
 \caption{Rôle et droits d'accès des différents utilisateurs du système. «~com. péd.~» est l'abbréviation de «~commission pédagogique~».}
