New actor: DAF (gray).

--- a/analyse.tex
+++ b/analyse.tex
@@ -115,7 +115,8 @@ Intervalle de temps ayant une date et une heure de début et de fin.
 %      GESTION DES RÔLES ET DES DROITS D'ACCÈS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Gestion des rôles et des droits d'accès}
-Chaque utilisateur a un rôle et des droits d'accès différents.
+Cette gestion consiste à assigner un ensemble de droits d'accès à différentes ressources à chacun des rôles définis par l'évaluation des enseignements.
+Ces rôles sont gérés par le superviseur.
 
 \begin{table}[ht]
 \begin{tabularx}{\textwidth}{|X|l|} \hline
