étapes traitement résultats + annexe mode d'emploi

--- a/analyse.tex
+++ b/analyse.tex
@@ -655,7 +655,11 @@ Il permet à la commission pédagogique d'émettre un avis pour chaque unité d'
 
 La période de traitement des résultats est définie dans le calendrier de campagne et débute après la fin de la période de prise d'avis.
 À l'issue de la période de prise d'avis, une série de statistiques et d'indicateurs sont mis à disposition de la commission pédagogique afin de les aider à traiter les résultats.
-Les indicateurs d'évaluation
+Le traitement des résultats est composé de deux étapes principales (cf. annexe~\ref{an:mode-emploi})~:
+\begin{itemize}
+	\item un travail préparatoire réalisé par un ou plusieurs membres de la commission pédagogique qui consiste à émettre une évaluation pour les unités d'enseignement et les enseignant ne nécessitant pas une assemblée plénière~;
+	\item une réunion de la commission pédagogique pour émettre une évaluation des unités d'enseignement et des enseignant n'ayant pas été évalués par la première étape.
+\end{itemize}
 
 Les évaluations émises à l'issue du traitement des résultats sont mises à disposition des gestionnaires pédagogiques facultaires, aux enseignants ainsi qu'aux gestionnaires de campagne.
 
@@ -877,8 +881,11 @@ Nom & Rôle & Actions & Data In & Data Out \\ \hline
 \part{Règlement cadre}\label{an:regl-cadre}
 \includepdf[pages={-}]{annexes/Reglement-cadre_Evaluation_Enseignements_v1_1.pdf}
 
-\part{Cahier des charges}
+\part{Cahier des charges}\label{an:cachier-charges}
 \includepdf[pages={-}]{annexes/evalens-application-cahier-charges.pdf}
+
+\part{Mode d'emploi de l'application en ligne}\label{an:mode-emploi}
+\includepdf[pages={-}]{annexes/mode-emploi-comm-peda-periodique.pdf}
 
 \end{document}
 
